# mwe-bootstrapped-rust-clang_rt.builtins.static

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  static_lib.patch
patches/: BUILD.bazel  rules_rust_fix_pwd_flags.patch
src/: main.rs
