bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.6.7")

register_toolchains("@llvm//toolchain:all")

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.framework(name = "Security")
osx.framework(name = "CoreServices")
use_repo(osx, "macos_sdk")

bazel_dep(name = "rules_rust", version = "0.69.0")

single_version_override(
    module_name = "rules_rust",
    patches = ["//patches:rules_rust_fix_pwd_flags.patch"],
    patch_strip = 1,
)

### rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2025-11-10"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")


# ### rules_rs
# bazel_dep(name = "rules_rs", version = "0.0.43")
# toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")

# toolchains.toolchain(
#     edition = "2024",
#     version = "nightly/2025-11-10",
# )

# use_repo(toolchains, "default_rust_toolchains")
# register_toolchains("@default_rust_toolchains//:all")

# ###

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.spec(
    package = "aws-lc-rs",
    version = "1.15.2",
)
crate.annotation(
    crate = "aws-lc-sys",
    build_script_data = [
        "@@llvm++llvm_source+compiler-rt//:clang_rt.builtins.static",
    ],
    build_script_env = {
        "AWS_LC_SYS_NO_JITTER_ENTROPY": "1",
    },
)
crate.from_specs(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
)
use_repo(crate, "crates")
